<resources>
    <string name="app_name">True Grails</string>
    <string name="label_app_version">Version 1.0.0</string>
    <string name="splash_prevent_text">Your assistants</string>
    <string name="copyright">2019 - @copyright</string>
    <string name="strButton_CreateNew">Create Account</string>
    <string name="strButton_Import">Import</string>
    <string name="strButton_Next">Next</string>
    <string name="strButton_Print_Phrase">Print The Phrase</string>
    <string name="strButton_Sell">Sell</string>
    <string name="strButton_Back">Back</string>
    <string name="strButton_Done">Done</string>
    <string name="strButton_claim">This item is not claimed, claim now!</string>
    <string name="strButton_GoToHome">Go To Home</string>
    <string name="strButton_GoToValidate">Validate Sneaker</string>
    <string name="scan_tutorial_scan_sneaker_id">Place sneaker QR code inside the scanner view</string>
    <string name="scan_tutorial_scan_address">Place buyer address QR code inside the scanner view</string>
    <string name="scan_tutorial_scan_claim_key">Place claiming key QR code inside the scanner view</string>
    <string name="user_name">Email</string>
    <string name="pin">Password (6 characters)</string>
    <string name="pin_reenter">Your Password (re-enter)</string>
    <string name="label_private_key">Your Private Key</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="tuto_print">You need to write down or screen shot this private key in case you lose your phone or some
        incident like that
    </string>
    <string name="your_languages">Your Languages</string>
    <string name="your_phrase">Your Phrase</string>
    <string name="tuto_signin">Enter your username and code here</string>
    <string name="tuto_intput_phrase">Please input your recovery phrase here</string>
    <string name="tuto_confirm_phrase">Select the 9th word of your recovery phrase</string>
    <string name="tuto_connect_print">Please connect to printer before print</string>
    <string name="your_address">Your Address</string>
    <string name="label_validate_step_1">1. Scan item token</string>
    <string name="label_validate_step_2">2. Validate item token with database</string>
    <string name="label_validate_step_3">3. Validate item token with Ethereum Blockchain using smart contract</string>
    <string name="label_is_validated">Item is validated</string>
    <string name="label_is_not_validated">Item is not validated</string>
    <string name="label_create_account">Create account</string>
    <string name="label_log_in">Log in</string>
    <string name="label_Explore">Explore</string>
    <string name="label_sneaker_board">Sneaker board</string>
    <string name="label_Copied">Copied</string>
    <string name="label_Collection">Grail collection</string>
    <string name="label_verify_phone">Verification</string>
    <string name="label_update_info">Update profile</string>
    <string name="label_manage_credit_card">My credit cards</string>
    <string name="label_transfer">Grails trading</string>
    <string name="text_holder_user_name">Your name (*)</string>
    <string name="text_holder_user_email">Your email (*)</string>
    <string name="text_holder_user_address">Your address (*)</string>
    <string name="text_holder_user_phone">Your phone</string>
    <string name="text_holder_user_code">Your passcode (6 digits)</string>
    <string name="text_holder_user_new_code">Your new passcode (6 digits)</string>
    <string name="text_holder_private_key">Paste your private key</string>
    <string name="label_button_register">Register</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_next">Next</string>
    <string name="label_button_change">Change</string>
    <string name="label_button_create_new_account">Create new account</string>
    <string name="label_button_profile">Profile</string>
    <string name="label_button_collection">My Grails</string>
    <string name="label_button_card_manage">Payment cards</string>
    <string name="label_button_setting">Setting</string>
    <string name="label_button_logout">Log out</string>
    <string name="label_button_verify">Verify</string>
    <string name="label_button_resend_code_count_down">Resend (%d)</string>
    <string name="label_button_resend_code">Resend</string>
    <string name="label_button_start">Start</string>
    <string name="label_button_update">Update</string>
    <string name="label_button_done">Done</string>
    <string name="label_button_continue">Continue</string>
    <string name="label_button_confirm">Confirm</string>
    <string name="text_question_login_1">What is private key?</string>
    <string name="text_question_login_2">How to find out private key?</string>
    <string name="text_question_login_3">What should I do?</string>
    <string name="text_explore_1">Do you want to\nknow everything about\nyour
        <font color="#ff773f">
            <b>GRAILS?</b>
        </font>
    </string>
    <string name="text_explore_2">Do you want to\nmake sure your
        <font color="#ff773f">
            <b>GRAILS</b>
        </font>
        \nsafety?
    </string>
    <string name="text_message_input_valid_email">Please enter a valid email address</string>
    <string name="text_message_incorrect_key">Private key is not correct.\nPlease try again later!</string>
    <string name="text_message_incorrect_password">Your password is incorrect.\nPlease try again!</string>
    <string name="text_message_incorrect_code">Your code is invalid.\nPlease try again!</string>
    <string name="text_message_confirm_email_login_1">Are you logging in account has email</string>
    <string name="text_message_confirm_email_login_2">Please input your password to continue.</string>
    <string name="text_private_key">Private key</string>
    <string name="confirm_title_1">What is private key?</string>
    <string name="confirm_content_1">Private key encryption is the form of encryption where only a single private key can encrypt and decrypt information. It is a fast process since it uses a single key. However, protecting one key creates a key management issue when everyone is using private keys. The private key may be stolen or leaked. Key management requires prevention of these risks and necessitates changing the encryption key often, and appropriately distributing  the key.</string>
    <string name="confirm_title_2">Is it important?</string>
    <string name="confirm_content_temp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="confirm_title_3">What should you do?</string>
    <string name="common_OK">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="msg_logout">Do you want to logout?</string>
    <string name="dialog_title_logout">Log Out</string>
    <string name="dialog_title_invalid_eos_name">Invalid Name</string>
    <string name="dialog_msg_invalid_eos_name">Receiver\'s EOS name is wrong format</string>
    <string name="dialog_title_close_private_key_confirm">Do you want to close?</string>
    <string name="dialog_msg_close_private_key_confirm">Please copy or write down your private key before close this screen.\nYou can\'t regain if you lost your private key.</string>
    <string name="activity_title_scan_grail">Scan Grails QR</string>
    <string name="header_guide_scan_grail">How to use the scan feature?</string>
    <string name="title_guide_scan_grail">WHAT DO YOU SCAN FOR?</string>
    <string name="content_guide_scan_grail">Find the QR code attached along with the stamp of your sneaker. It represents an unique ID of the sneaker on the TrueGrails system. Scan it to check if the details you find in reality match with the specification retrieved from the blockchain data. The application will also show you what to do based on your account\'s relation to the scanned sneaker.</string>
    <string name="activity_title_scan_private_key">Scan Private Key</string>
    <string name="header_guide_scan_private_key">What is private key?</string>
    <string name="title_guide_scan_private_key">WHAT IS PRIVATE KEY?</string>
    <string name="content_guide_scan_private_key">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="activity_title_scan_eos_name">Scan EOS Name</string>
    <string name="header_guide_scan_eos_name">What is EOS name?</string>
    <string name="title_guide_scan_eos_name">WHAT IS EOS NAME?</string>
    <string name="content_guide_scan_eos_name">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="activity_title_scan_claim">Scan Claim Token</string>
    <string name="header_guide_scan_claim">Do you know Claim Token?</string>
    <string name="title_guide_scan_claim">WHAT SHOULD I DO WITH CLAIM TOKEN?</string>
    <string name="content_guide_scan_claim">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="label_color">Color</string>
    <string name="label_size">Size (U.S)</string>
    <string name="label_release_date">Released at</string>
    <string name="label_sale">Sale</string>
    <string name="label_claim">Let’s own</string>
    <string name="label_item_found">Found it</string>
    <string name="text_item_stolen">This item has been stolen</string>
    <string name="text_item_own_by">Owned by</string>
    <string name="text_item_is_your">It is yours!</string>
    <string name="text_item_is_new">Haven’t had owner</string>
    <string name="text_careful">BE CAREFUL!</string>
    <string name="msg_grant_permission_camera">Please grant camera permission to scan</string>
    <string name="msg_scan_fail">Something went wrong when validate</string>
    <string name="format_eascrypt_password">%struegrails</string>
    <string name="hint_phone">94 325–32563</string>
    <string name="text_create_with_phone">Please choose your region\nand enter phone number to begin joining\nwith us</string>
    <string name="text_title_finish_verify">CONGRATULATIONS</string>
    <string name="text_content_finish_verify">Your account has been registered successfully.\nLet’s experience!</string>
    <string name="msg_no_data_card">Oops! Still no have credit card</string>
    <string name="msg_detail_no_data_card">Please add a new credit card to continue your\npayment processing</string>
    <string name="text_add_new_credit_card">Add a new credit card</string>
</resources>