<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/img_card"
        android:tint="@color/colorPutty"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_no_data_card"
        android:textSize="@dimen/text_size_xxlarge"
        android:textColor="@color/colorPutty"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_margin_15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_detail_no_data_card"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/colorPutty"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_margin_4dp"
        android:layout_marginHorizontal="@dimen/activity_margin_24dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_32dp"
        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
        app:cardCornerRadius="@dimen/activity_margin_8dp"
        app:cardElevation="3dp">

        <TextView
            android:id="@+id/tvAddCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_new_credit_card"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"
            android:drawableLeft="@drawable/ic_add"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/activity_margin_16dp"
            android:layout_marginHorizontal="@dimen/activity_margin_16dp"
            android:layout_marginVertical="@dimen/activity_margin_12dp"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>