<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_margin_18dp"
    android:paddingHorizontal="@dimen/activity_margin_24dp"
    android:background="@android:color/white"
    tools:context=".screens.fragment.LoginFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@android:color/transparent"
        android:paddingVertical="@dimen/activity_margin_10dp"
        android:paddingRight="@dimen/activity_margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/activity_margin_16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/btnBack"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_log_in"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
        android:id="@+id/layout_input_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="@dimen/activity_margin_48dp"
        android:background="@drawable/bubble_background">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:hint="@string/text_holder_private_key"
            android:id="@+id/etUserPrivateKey"
            android:drawableLeft="@drawable/ic_key"
            android:singleLine="true"
            android:drawablePadding="@dimen/activity_margin_12dp"
            android:paddingVertical="@dimen/activity_margin_12dp"
            android:paddingLeft="@dimen/activity_margin_12dp"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/btnScanPrivateKey"/>

        <ImageView
            android:id="@+id/btnScanPrivateKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scan"
            android:paddingHorizontal="@dimen/activity_margin_16dp"
            android:paddingVertical="@dimen/activity_margin_12dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWarning"
        android:layout_marginTop="@dimen/activity_margin_24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_question_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOrangish"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_question_login_1"
            android:drawableLeft="@drawable/ic_help"
            android:drawableTint="@color/colorOrangish"
            android:layout_marginVertical="@dimen/activity_margin_8dp"
            android:gravity="center"
            android:drawablePadding="@dimen/activity_margin_8dp"
        />

        <TextView
            android:id="@+id/tv_question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOrangish"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_question_login_2"
            android:drawableLeft="@drawable/ic_help"
            android:drawableTint="@color/colorOrangish"
            android:layout_marginVertical="@dimen/activity_margin_8dp"
            android:gravity="center"
            android:drawablePadding="@dimen/activity_margin_8dp"
        />

        <TextView
            android:id="@+id/tv_question_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOrangish"
            android:textSize="@dimen/text_size_large"
            android:text="@string/text_question_login_3"
            android:drawableLeft="@drawable/ic_help"
            android:drawableTint="@color/colorOrangish"
            android:layout_marginVertical="@dimen/activity_margin_8dp"
            android:gravity="center"
            android:drawablePadding="@dimen/activity_margin_8dp"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_btn_green_gradient_selector"
        android:text="@string/label_button_next"
        android:layout_marginBottom="@dimen/activity_margin_24dp"
        android:textColor="@color/colorWhite"
        android:enabled="false"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_xlarge"
        android:padding="@dimen/activity_margin_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_message_incorrect_key"
        android:layout_marginTop="@dimen/activity_margin_16dp"
        android:padding="@dimen/activity_margin_12dp"
        android:textColor="@color/colorOrangish"
        android:lineSpacingExtra="4dp"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toBottomOf="@+id/layout_input_key"
        android:background="@drawable/warning_background"
        android:visibility="gone"
    />

    <include
        android:id="@+id/pb_loading"
        layout="@layout/loading_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>