<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/img_finish_verify"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H, 1:1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_finish_verify"
        android:textSize="@dimen/text_size_24"
        android:textColor="@color/colorDarkTurquoise"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
        android:layout_marginTop="@dimen/activity_margin_40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_content_finish_verify"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/colorDarkTurquoise"
        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
        android:layout_marginTop="@dimen/activity_margin_12dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_btn_green_gradient_selector"
        android:text="@string/label_button_start"
        android:layout_marginBottom="@dimen/activity_margin_24dp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_xlarge"
        android:padding="@dimen/activity_margin_16dp"
        android:layout_marginHorizontal="@dimen/activity_margin_24dp"
        />

</LinearLayout>